- FIles: Removed acl check for diskquota when deleting a file
- Files: Added check for file already exist in addFileSystemFile

06-03-2015 6.1.25
- Email: Fixed namespace problem with sending email.
- Files: Fixed problem with deletion of files when deleting them one at a time. (Sometimes the file was not deleted from disk after that.)

05-03-2015 6.1.24
- fixed unlink permission denied error on windows when sending email
- New config option $config['disable_mail'] = true; to disable all mail sending
- Calendar: Added pager to categories selection in the event dialog
- Email/Sieve: Added possibility to check for sieve capabilities on the server.
- Billing: Fixed problem with duedate calculation if the bTime field is empty

02-03-2015 6.1.23
- Fixed GOTA on windows servers
- JsonPost validation and fixes for the TabbedFormDialogs
- Event store will not try to search for events when calendar is not found
- Use OPENSSL_CIPHER_3DES for smime encryption
- Billing: Fixed problem that the trackingcodes or costcodes are not saved when only editing one of those fields in the items grid.
- Billing: Fixed display of 0 in the pdf_template and odf_template fields of the order status when they are not set
- Tickets: Fixed enters in email templates for mails that are send to the ticketagent.

26-02-2015 6.1.22
- Billing: sales agent names optional in order grid.
- Address book: pagination for addresslist select when setting up a new newsletter.
- Calendar & Tasks: fixed displaying task details in calendar list view.
- Email: Fixed bug in emailcomposer that didn't apply the changes made in the "Source editor" when saving/sending while the composer is in source edit mode.
- Strip non ascii chars from message-id in mail to workaround Incredimail bug
- Billing: optimized autocomplete in trackingcode combobox of the itemsgrid  
- Email/Sieve: Out of office saving dates conversion bug fixed.
- Tickets: Email to agent is now of content-type "text/html"

20-02-2015 6.1.21